--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,10 +15,8 @@
       <tr>
         <td><%= post.name %></td>
         <td><%= post.photo %></td>
-        <td><%= post.caption %></td>
+        <td><%= truncate(post.caption, length: 10) %></td>
         <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
