--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,8 +12,7 @@
 
 <p>
   <strong>Caption:</strong>
-  <%= @post.caption %>
+  <%= simple_format(@post.caption) %>
 </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
