--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
-        <td><%= post.name %></td>
+        <td><%= post.user.name %></td>
         <td><%=  image_tag post.photo.thumb.url %></td>
         <td><%= truncate(post.caption, length: 10) %></td>
         <td><%= link_to 'Show', post %></td>
