--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  padding: 5%;
+}
+
+img {
+  @extend .img-responsive;
+  margin: 0 auto;
+}
+
+.buttons-space {
+  margin-top: 10px;
+}
