--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,16 +1,29 @@
-<h2>Change your password</h2>
+<h2>パスワードの再設定</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), 
+      html: {method: :put, role: "form", class: "form-horizontal login_form"}) do |f| %>
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div><%= f.label :password, "New password" %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %></div>
+  <div class="form-group">
+    <%= f.label :password, class: "col-sm-3 control-label" %>
+    <div class="col-sm-9">
+    <%= f.password_field :password, :autofocus => true, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :password_confirmation, class: "col-sm-3 control-label" %>
+    <div class="col-sm-9">
+    <%= f.password_field :password_confirmation, class: "form-control" %>
+    </div>
+  </div>
 
-  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-
-  <div><%= f.submit "Change my password" %></div>
+  <div class="form-group">
+    <div class="col-sm-offset-3 col-sm-2">
+      <%= f.submit "設定", class: "btn btn-primary" %>
+    </div>
+    <div class="col-sm-offset-1 col-sm-6">
+      <%= link_to "戻る", new_user_session_path, class: "btn btn-default" %>
+    </div>
+  </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
