--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,20 @@
-<h2>Forgot your password?</h2>
+<h2>パスワード再設定メール</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), 
+      html: {method: :post, role: "form", class: "form-horizontal login_form"}) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+  <div class="form-group">
+    <%= f.label :email, class: "col-sm-2 control-label" %>
+    <div class="col-sm-8">
+    <%= f.email_field :email, :autofocus => true, class: "form-control" %>
+    </div>
+  </div>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-2">
+      <%= f.submit "送信", class: "btn btn-primary" %><br/ >
+      <%= link_to "戻る", new_user_session_path, class: "btn btn-default  buttons-space" %>
+    </div>
+  </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
