--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,34 @@
-<h2>Sign up</h2>
+<h2>ユーザー登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name),
+             html: {role: "form", class: "form-horizontal login_form"}) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :name %><br />
-  <%= f.email_field :name, autofocus: true %></div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <div class="form-group">
+    <%= f.label :email, class: "col-sm-2 control-label" %>
+    <div class="col-sm-8"><%= f.email_field :email, autofocus: true %></div>
+  </div>
 
-  <div><%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+  <div class="form-group">
+    <%= f.label :password, class: "col-sm-2 control-label" %>
+    <div class="col-sm-8"><%= f.password_field :password, autocomplete: "off" %></div>
+  </div>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+  <div class="form-group">
+    <%= f.label :password_confirmation, class: "col-sm-2 control-label" %>
+    <div class="col-sm-8"><%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+  </div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div class="form-group">
+    <%= f.label :name, class: "col-sm-2 control-label" %>
+    <div class="col-sm-8"><%= f.text_field :name %></div>
+  </div>
+
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-2">
+      <%= f.submit "登録", class: "btn btn-primary" %> <br/>
+      <%= link_to "戻る", new_user_session_path, class: "btn btn-default buttons-space" %>
+    </div>
+  </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
