--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@post) do |f| %>
+<%= form_for(@post, html: {class: "form-horizontal", role: "form"}) do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -11,15 +11,21 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :photo %><br>
-    <%= f.file_field :photo %>
+  <div class="form-group">
+    <%= f.label :caption, class: "col-sm-2 control-label" %>
+    <div class="col-sm-8">
+    <%= f.text_area :caption, size: "60x10", class: "form-control"  %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :caption %><br>
-    <%= f.text_area :caption %>
+  <div class="form-group">
+    <%= f.label :photo, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
+    <%= f.file_field :photo, class: "form-control"  %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-4">
+    <%= f.submit "投稿", class: "btn btn-default" %>
+    </div>
   </div>
 <% end %>
