--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New post</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', posts_path %>
+<div class="panel panel-success">
+  <div class="panel-heading">
+    <h3 class="panel-title">投稿</h3>
+  </div>
+  <div class="panel-body">
+    <%= render 'form' %>
+  </div>
+  <div class="panel-footer">
+    <%= link_to 'Back', posts_path, class:"btn btn-default" %>
+  </div>
+</div>
